--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -7,7 +7,7 @@ http://yuilibrary.com/license/
 
 html {
   color: #000;
-  background: #FFF
+  background: #fff;
 }
 
 body,
@@ -36,61 +36,61 @@ blockquote,
 th,
 td {
   margin: 0;
-  padding: 0
+  padding: 0;
 }
 
 table {
   border-collapse: collapse;
-  border-spacing: 0
+  border-spacing: 0;
 }
 
 fieldset,
 img {
-  border: 0
+  border: 0;
 }
 
-/*address, caption, cite, code, dfn, em, strong, th, var {
+/* address, caption, cite, code, dfn, em, strong, th, var {
 font-style: normal;
 font-weight: normal
-}*/
+} */
 
 ol,
 ul {
-  list-style: none
+  list-style: none;
 }
 
 caption,
 th {
-  text-align: left
+  text-align: left;
 }
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
   font-size: 100%;
-  font-weight: normal
-}
+  font-weight: normal;
+} */
 
 q:before,
 q:after {
-  content: ''
+  content: '';
 }
 
 abbr,
 acronym {
   border: 0;
-  font-variant: normal
+  font-variant: normal;
 }
 
 sup {
-  vertical-align: text-top
+  vertical-align: text-top;
 }
 
 sub {
-  vertical-align: text-bottom
+  vertical-align: text-bottom;
 }
 
 input,
@@ -99,9 +99,8 @@ select {
   font-family: inherit;
   font-size: inherit;
   font-weight: inherit;
-  *font-size: 100%
 }
 
 legend {
-  color: #000
+  color: #000;
 }
